# Sol-YieldHunter

./: README.md  package-lock.json  package.json  pnpm-lock.yaml
client/: index.html
client/src/: App.tsx  index.css
client/src/components/SolSeeker/: ChatPanel.tsx
client/src/components/dashboard/: portfolio-overview.tsx  quick-actions.tsx  summary-cards.tsx  yield-opportunities.tsx
client/src/components/layout/: header.tsx  sidebar.tsx
client/src/components/modals/: investment-modal.tsx  subscription-modal.tsx  telegram-modal.tsx
client/src/components/ui/: button.tsx
client/src/contexts/: SolanaWalletContext.tsx
client/src/hooks/: use-wallet.ts
client/src/lib/: solana.ts  subscription.ts
client/src/pages/: dashboard.tsx  faq.tsx  opportunities.tsx  settings.tsx  solseeker.tsx  transactions.tsx
contract/client/: subscription.ts
contract/program/: Cargo.toml
contract/program/src/: lib.rs
scripts/: initialize-db.ts
server/: db.ts  routes.ts  storage.ts
server/services/: openai.ts  solana.ts  telegram.ts  yield-analyzer.ts
shared/: schema.ts
